[gd_scene load_steps=2 format=3 uid="uid://cpxd2i7v6t6b6"]

[ext_resource type="Script" uid="uid://br5c0g1w1cbq3" path="res://addons/admob/sample/tabs/RewardedInterstitial.gd" id="1_58w2p"]

[node name="RewardedInterstitial" type="VBoxContainer"]
script = ExtResource("1_58w2p")

[node name="Load" type="Button" parent="."]
layout_mode = 2
text = "Load"

[node name="Show" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "Show"

[node name="Destroy" type="Button" parent="."]
layout_mode = 2
disabled = true
text = "Destroy"

[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Show" to="." method="_on_show_pressed"]
[connection signal="pressed" from="Destroy" to="." method="_on_destroy_pressed"]
